// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`scope-expansion > builds only the leaf package when invoked from its directory 1`] = `
[
  "rpc.build[working_dir=packages/library]",
  "  work_queue.handle_build",
  "    build.initialize_packages",
  "    build.load_package_sources[package=@daemon-test/library]",
  "    build.incremental_build[module_count=1]",
  "      build.parse[dirty_modules=1]",
  "      build.compile",
]
`;

exports[`scope-expansion > root build loads all packages after a scoped leaf build 1`] = `
[
  "rpc.build[working_dir=packages/library]",
  "  work_queue.handle_build",
  "    build.initialize_packages",
  "    build.load_package_sources[package=@daemon-test/library]",
  "    build.incremental_build[module_count=1]",
  "      build.parse[dirty_modules=1]",
  "      build.compile",
  "rpc.build[working_dir=.]",
  "  work_queue.handle_build",
  "    build.initialize_packages",
  "    build.load_package_sources[package=@daemon-test/app]",
  "    build.load_package_sources[package=@daemon-test/library]",
  "    build.load_package_sources[package=@daemon-test/namespaced]",
  "    build.load_package_sources[package=@daemon-test/with-dev-deps]",
  "    build.load_package_sources[package=@daemon-test/with-interface]",
  "    build.load_package_sources[package=@daemon-test/with-post-build]",
  "    build.load_package_sources[package=@daemon-test/with-warnings]",
  "    build.load_package_sources[package=daemon-test-fixture]",
  "    build.incremental_build[module_count=11]",
  "      build.parse[dirty_modules=9]",
  "      build.compile",
  "build.js_post_build[command=node post-build.mjs, js_file=packages/with-post-build/src/PostBuild.mjs]",
  "  build.js_post_build_stdout",
]
`;

exports[`scope-expansion > scoped build loads transitive dependencies 1`] = `
[
  "rpc.build[working_dir=packages/app]",
  "  work_queue.handle_build",
  "    build.initialize_packages",
  "    build.load_package_sources[package=@daemon-test/app]",
  "    build.load_package_sources[package=@daemon-test/library]",
  "    build.incremental_build[module_count=2]",
  "      build.parse[dirty_modules=2]",
  "      build.compile",
]
`;
